--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>603</width>
-    <height>491</height>
+    <width>330</width>
+    <height>550</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>330</width>
+    <height>550</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
@@ -27,7 +33,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tab_general">
       <attribute name="title">
@@ -232,12 +238,12 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>249</width>
-         <height>171</height>
+         <width>291</width>
+         <height>191</height>
         </rect>
        </property>
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -260,6 +266,9 @@
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>X</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -309,6 +318,12 @@
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_10">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
            <string>Extruder
 feedrate</string>
